Fix spacing in menu

--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,12 @@ nav h1 {
 
 nav ul {
     background-color: #333;
+    font-size: 0;
 }
 
 nav ul li {
     display: inline-block;
+    font-size: 1rem;
 }
 
 nav ul li a {
